--- a/functions/package.json
+++ b/functions/package.json
@@ -14,15 +14,17 @@
   },
   "main": "index.js",
   "dependencies": {
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0",
+    "@hapi/boom": "^10.0.0",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "express-joi-validation": "^5.0.1",
     "firebase": "^9.8.1",
-    "joi": "^17.6.0"
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.18.0",
+    "joi": "^17.6.0",
+    "method-override": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
