added a react proyect for testing with a form🤯

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "ecommerce-mp"
-  }
+    "default": "shoppit-app-stg",
+    "staging": "shoppit-app-stg"
+  },
+  "targets": {}
 }
