--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,5 @@
 {
   "functions": {
-    "source": "functions",
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    "source": "functions"
   }
 }
