--- a/functions/package.json
+++ b/functions/package.json
@@ -27,8 +27,10 @@
     "method-override": "^3.0.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-plugin-import": "^2.26.0",
     "firebase-functions-test": "^0.2.0"
   },
   "private": true
