--- a/functions/package.json
+++ b/functions/package.json
@@ -24,7 +24,9 @@
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "joi": "^17.6.0",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.23.0",
