--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "@hapi/boom": "^10.0.0",
+    "axios": "^0.27.2",
     "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
