--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   "main": "index.js",
   "dependencies": {
     "@hapi/boom": "^10.0.0",
+    "algoliasearch": "^4.13.1",
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "concurrently": "^7.1.0",
