--- a/functions/package.json
+++ b/functions/package.json
@@ -26,6 +26,7 @@
     "firebase": "^9.8.1",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.22.0",
+    "google-spreadsheet": "^3.3.0",
     "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
