--- a/functions/package.json
+++ b/functions/package.json
@@ -33,6 +33,7 @@
     "mercadopago": "^1.5.13",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0"
