--- a/functions/package.json
+++ b/functions/package.json
@@ -36,7 +36,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.5",
     "swagger-jsdoc": "^6.2.1",
-    "swagger-ui-express": "^4.4.0"
+    "swagger-ui-express": "^4.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.23.0",
